--- a/Knowledge_Reviews_Analysis/IF_info_topic_depth_network.ipynb
+++ b/Knowledge_Reviews_Analysis/IF_info_topic_depth_network.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "method_raw_text = pd.read_excel('/Users/angieryu2202/Desktop/IF_App_Study/sents_df.xlsx')"
+    "method_raw_text = pd.read_excel('sents_df.xlsx')"
    ]
   },
   {
@@ -625,7 +625,7 @@
    ],
    "source": [
     "graph_builder = GraphMLCreator()\n",
-    "graph_builder.createGraphMLWithThreshold(co_result, word_hist, vocab, file=\"/Users/angieryu2202/Desktop/IF_App_Study/info_sents_coword_network_18.graphml\", threshold=18.0)"
+    "graph_builder.createGraphMLWithThreshold(co_result, word_hist, vocab, file=\"info_sents_coword_network_18.graphml\", threshold=18.0)"
    ]
   },
   {
@@ -634,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#graph_builder.plot_graph(file=\"/Users/angieryu2202/Desktop/IF_App_Study/if_app_review_coword_network.pdf\")"
+    "#graph_builder.plot_graph(file=\"if_app_review_coword_network.pdf\")"
    ]
   }
  ],
